[tool.poetry]
name = "twitter api consumed with python"
version = "0.0.1"
description = ""
authors = ["Marcelo Pedroni da Silva <marcelopedronidasilva@outlook.com.br>"]

[tool.poetry.dependencies]
python  = "^3.8.10"
tweepy  = "^4.6.0"
pymongo = "^4.0.2"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
flake8 = "^3.9.2"
black  = "^21.8b0"
isort  = "^5.9.3" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
